project manager and probably some other stuff

--- a/spring_with_sql/assignments/book-club/src/main/resources/static/css/styles.css
+++ b/spring_with_sql/assignments/book-club/src/main/resources/static/css/styles.css
@@ -4,6 +4,11 @@
     font-style: oblique;
 }
 
+.home {
+    display: flex;
+    flex-direction: column;
+}
+
 .top {
     display: flex;
     justify-content: space-between;
