--- a/twitter_lite/client/src/App.css
+++ b/twitter_lite/client/src/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .middleOfPage {
@@ -64,4 +63,44 @@
   border-bottom: 1px solid #828282;
   display: flex;
   flex-direction: column;
+}
+
+#profile-header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: smaller;
+  
+}
+
+.tweet {
+  display: flex;
+  flex-direction: column;
+  padding: .75em;
+  background-color: #1a1a1a;
+  border: 1px solid #828282;
+  align-items: flex-start;
+}
+
+.tweets {
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
+}
+
+.editForm {
+  gap: 3em;
+  padding: .75em;
+  background-color: #1a1a1a;
+  border: 1px solid #828282;
+  align-items: flex-start;
+  margin-top: 15px;
+  font-size: small;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
