--- a/twitter_lite/client/src/index.css
+++ b/twitter_lite/client/src/index.css
@@ -41,6 +41,11 @@ h1 {
   line-height: 1.1;
 }
 
+p {
+  font-size: 1.2em;
+  line-height: 1.3;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
