--- a/twitter_lite/client/src/App.css
+++ b/twitter_lite/client/src/App.css
@@ -11,6 +11,14 @@
   min-height: 100vh;
 }
 
+.error-text {
+  color: red;
+  font-size: small;
+  margin-left: auto;
+  margin-right: auto;
+  font-style: oblique;
+}
+
 #nav {
   display: flex;
   flex-direction: column;
