--- a/twitter_lite/client/src/App.css
+++ b/twitter_lite/client/src/App.css
@@ -54,6 +54,7 @@
 
 #home-right {
   display: flex;
+  flex-direction: column;
   flex: 1;
   position: relative;
   margin-left: 2em;
@@ -112,3 +113,4 @@
   justify-content: space-between;
   align-items: center;
 }
+
